--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "googleapis": "^133.0.0",
     "jsonwebtoken": "^9.0.2",
