--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -10,11 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.7",
+    "browserify-zlib": "^0.2.0",
     "concurrently": "^8.2.2",
+    "crypto-browserify": "^3.12.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.35",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
